# demo-ml

./: .env.template  .gitignore  Classifieddr_test-casse_unistqqroieed0fd.xlsx  Classifier_test-case_unistroi.xlsx  Classifier_test-case_unistroi2.xlsx  Classifier_test-case_unistroieed0fd.xlsx  Classifier_test-casse_unistqqroieed0fd.xlsx  Dockerfile  LICENSE  README.md  docker-compose.yml  e.py  kl.txt  pyproject.toml  save.py  train_dataset_unistroi_new+no_staircases+synthetic.xlsx  нечёткое_сравнение2.xlsx
datasets/: LevelGroup_ fixed NSI groups by Dima.xlsx  train_dataset_unistroi+sintetic+clear_big_class.xlsx  train_dataset_unistroi+sintetic+clear_big_class_non_lestnisa.xlsx  train_dataset_unistroi+sintetic.xlsx  train_dataset_unistroi+syntetics+clear_big_class+not_lestnitsa.xlsx  train_dataset_unistroi_new+no_staircases+synthetic.xlsx  train_dataset_unistroi_new+no_staircases.xlsx  train_dataset_unistroi_new.xlsx  ynistroi.xlsx
file/: Classifier_test-case_unistroi.xlsx  model_ynistroi_007.pkl
model/: model_unistroi.pkl  model_unistroi_Logistic+syntetics+clear_big_class+not_lestnitsa.pkl  model_unistroi_LogisticRegression+syntetics+clear_big_class+not_lestnitsa.pkl  model_unistroi_LogisticRegression+syntetics+clear_big_class+not_lestnitsa2.pkl  model_unistroi_LogisticRegression.pkl  model_unistroi_LogisticRegression1,5.pkl  model_unistroi_LogisticRegression2,5.pkl  model_unistroi_LogisticRegression2.pkl  model_unistroi_LogisticRegression3.pkl  model_unistroi_LogisticRegression4.pkl  model_unistroi_LogisticRegression5.pkl  model_unistroi_LogisticRegression6.pkl  (+1 more)
(+36 files in other folders)
