[tool.poetry]
name = "demo-ner"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = ">=0.101.0,<0.102.0"
uvicorn = ">=0.23.2,<0.24.0"
pydantic = ">=1.9.0,<2.0.0"
httpx = "^0.27.0"
openpyxl = "^3.1.4"
spacy = "^3.7.5"
spacy-transformers = "^1.3.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."
